[package]
name = "amethyst-physx"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.15.0"
default-features = false
features = ["audio", "renderer", "gltf", "json", "saveload"]

[dependencies]
physx = { path = "physx-rs/physx" }
physx-sys = { path = "physx-rs/physx-sys" }
nalgebra = { version = "0.21.0", features=["mint"] }
glam = { version = "0.8", features=["mint"] }
mint = "0.5.5"
# Until the official amethyst-imgui crate updates it's amethyst dependency to 0.15, I have to use my own fork
amethyst-imgui = { git = "https://github.com/FireFlyForLife/amethyst-imgui.git", version="0.15.0" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
